# headjack-pre

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
client/: Makefile  README.md  pyproject.toml
docs/config/_default/: menu.toml
docs/content/0.1.0/: embeddings.md  headjack-client.md  headjack-server.md
docs/content/0.1.0/posts/theme-doc/: index.en.md
examples/: load_knowledge_documents.py
examples/knowledge/: ten-years-after.txt
headjack/: config.py  models.py
headjack/agents/: basic_qa_agent.py
headjack/api/: app.py
headjack/dispatch/: tool_dispatch.py
headjack/tools/: metric_search.py
headjack/tools/examples/: metric_data_query_to_metrics_dimensions.md  metric_search_queries_to_metrics_dimensions.md
headjack_server/: models.py
headjack_server/agents/: basic_qa_agent.py
headjack_server/api/: app.py
headjack_server/tools/: metric_search.py
notebooks/: bkp.ipynb  lmql_prototyping.ipynb
tests/: conftest.py  test_sample.py
tests/api/: test_app.py
