[tool.poetry]
name = "headjack"
version = "0.1.0"
description = ""
authors = ["Nick Ouellet <35903677+CircArgs@users.noreply.github.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "7.2.2"
pytest-checkdocs = "2.9.0"
pre-commit = "3.2.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
